Fixed scrollbar issue and used flex layout in grant wizard.

--- a/web/pgadmin/browser/static/css/wizard.css
+++ b/web/pgadmin/browser/static/css/wizard.css
@@ -10,6 +10,7 @@
 .wizard_dlg {
   height: 100%;
   width: 100%;
+  overflow-y: hidden;
 }
 
 .pgadmin-wizard {
